[package]
name = "ristate"
version = "0.1.0"
authors = ["Bryan Ndjeutcha <ndjeutcha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
wayland-scanner = "0.29.3"

[dependencies]
wayland-protocols = "0.29.3"
wayland-commons = "0.29.3"
wayland-client = "0.29.3"
