[package]
name = "ristate"
version = "0.1.0"
authors = ["Bryan Ndjeutcha <ndjeutcha@gmail.com>"]
edition = "2018"

[build-dependencies]
wayland-scanner = "0.29.3"

[dependencies]
wayland-protocols = "0.29.3"
wayland-commons = "0.29.3"
wayland-client = "0.29.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
